# clawhub_importer

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  import.yml
src/clawhub_importer/: __init__.py  cli.py  crawler.py  publisher.py  state.py  transformer.py
tests/: test_cli.py  test_crawler.py  test_publisher.py  test_state.py  test_transformer.py
